syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.yubraj.microservice.models.grpc";

message BankCheckRequest {
    int32 account_number = 1;
}


message Balance {
    int32 amount = 1;
}

message WithdrawRequest {
    int32 account_number = 1;
    int32 amount = 2;
}

message DepositRequest {
    int32 account_number = 1;
    int32 amount = 2;
}

message Money {
    int32 value = 1;
}


service BankService {
    //unary
    rpc getBalance(BankCheckRequest) returns (Balance);

    //server streaming
    rpc withDraw(WithdrawRequest) returns (stream Money);

    //client streaming
    rpc  cashDeposit(stream DepositRequest) returns (Balance);
}
